force-app/main/default/objects/AccountContactRelation/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Used for display in flow data tables</description>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>