force-app/main/default/objects/AccountContactRelation/fields/Is_Household_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Household_Member__c</fullName>
    <description>Used in the Household Flow.</description>
    <formula>IF(AND(INCLUDES(Roles,&quot;Household Member&quot;),  Account.Is_Household__c ,  IsActive ) ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active Household Member</label>
    <type>Checkbox</type>
</CustomField>