force-app/main/default/objects/AccountContactRelation/fields/Sync_Household_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sync_Household_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Household Phone</label>
    <type>Checkbox</type>
</CustomField>